# use-computer-cookbook

./: .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  run.py  server.py
adhoc/: export.py  tasks.json
adhoc/tasks/: ios.json
collected/: export.py
datasets/macosworld_ready/file_management__24903bd5-44c5-27e7-748a-1cf2ec714e0b/: instruction.md  task.toml
datasets/macosworld_ready/file_management__f576f917-0978-582a-231f-a34fec1f957a/: instruction.md
datasets/macosworld_ready/productivity__000d01d7-75ba-86fc-7f91-41cf48c1fcdd/: instruction.md
datasets/macosworld_ready/productivity__05eb3ac3-9c69-8be8-a5d7-06c150839d29/: instruction.md
datasets/macosworld_ready/productivity__0a1b981d-bcb2-a54b-97b5-1cc7c5f0cb37/: instruction.md
datasets/macosworld_ready/productivity__0bc05a1d-1e5a-c967-e0f9-fbca371592ca/: instruction.md
datasets/macosworld_ready/productivity__12c3de99-51a3-371b-7a00-47887565bfd0/: instruction.md
datasets/macosworld_ready/productivity__2d8282ba-155c-c044-f682-10be7126e2b0/: instruction.md
datasets/macosworld_ready/productivity__60428663-7708-6cc0-4641-057953786a0f/: task.toml
datasets/macosworld_ready/productivity__6a40e62d-c990-7d55-81fb-f2ced53664b7/: instruction.md
datasets/macosworld_ready/productivity__6e04a326-3610-edc4-1302-f02b175efd56/: instruction.md
datasets/macosworld_ready/productivity__7cf47313-5280-71d5-2a14-ac8e1826cd69/: instruction.md
datasets/macosworld_ready/productivity__81d8bcbb-b456-3ae4-dd6a-6fac2bdbeec2/: instruction.md
datasets/macosworld_ready/productivity__c1651287-3e1b-f24f-1b5d-439842e71c46/: instruction.md
datasets/macosworld_ready/productivity__d4826b7e-3a4f-8338-9985-f9964517488a/: instruction.md
datasets/macosworld_ready/productivity__e4b774ef-3c56-3df8-69e6-1ff6ac69f3f7/: instruction.md
datasets/macosworld_ready/safety__3ef3a054-c2cc-be98-dc08-a23fedbe68fe/: instruction.md
skills/: SKILL.md
skills/references/: cookbook.md  ios.md  macos.md
skills/use-computer-sdk/: SKILL.md
skills/use-computer-sdk/references/: ios.md  (+3 more)
src/runner/: __init__.py
tests/infra/: test_file_upload_spaces.py  test_pool_exhaustion.py  test_screenshot_queue.py
(+179 files in other folders)
