[project]
name = "runner"
version = "0.1.0"
description = "mmini Harbor runner — CUA agents, mmini environment, macOSWorld adapter"
readme = "README.md"
authors = [
    { name = "Joan Cabezas", email = "joan.santiago.cabezas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "harbor",
    "mmini>=0.1.0",
    "anthropic>=0.86.0",
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "httpx>=0.27.0",
]

[[tool.uv.index]]
name = "fury"
url = "https://repo.fury.io/josancamon19/"
explicit = true

[tool.uv.sources]
mmini = { path = "../sdk", editable = true }
harbor = { path = "../harbor", editable = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
